# ESP32-T-Display-S3-Slint-Rust-Template

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: main.rs
ui/: appwindow.slint
